[project]
name = "langchain-sample-agent"
version = "0.1.0"
description = "A conversational LangChain agent powered by GPT-4o with Scalekit integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scalekit-sdk-python>=2.4.3",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",
    "python-dotenv>=1.0.0",
]
